# i2v_templates

./: .gitignore  CONTEXT.md  Makefile  README.md  pyproject.toml
api/: jobs.py  main.py
app/: README.md  next.config.ts  package.json  pnpm-lock.yaml
app/app/: globals.css  layout.tsx  page.tsx
app/app/_components/: HealthCheck.tsx  StudioWorkspace.tsx  TemplateGallery.tsx  TopNav.tsx
app/app/api/health/: route.ts
app/lib/: api.ts  useJob.ts
i2v/: __init__.py  classifier.py  depth_video.py  end_frame.py  fal_client.py  image_pass.py  models.py  types.py  video_models.py  video_pass.py  video_restyle.py  video_upscale.py
plans/: HYBRID_MOTION_PLAN.md
scripts/: classify_and_assign.py  list_models.py  list_video_models.py  run_plan_slot.py  run_slot.py  run_starlight.py  run_v2v.py  run_video.py
templates/: cinematic-editorial-v1.json  cozy-bohemian-nook.json  golden-hour-dusk.json  luxe-interior-living.json  modern-coastal-twilight.json  mountain-retreat.json  sleek-urban-loft.json
