[project]
name = "i2v-templates"
version = "0.0.1"
description = "Photo-to-video templates: apply a creative template (image + video prompts, music, cuts) to a set of amateur real-estate photos and render a professional walkthrough."
requires-python = ">=3.10"
dependencies = [
    "fal-client>=0.5.6",
    "pydantic>=2.7",
    "python-dotenv>=1.0.1",
    "Pillow>=10.4.0",
    "click>=8.1.7",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
]

[project.scripts]
i2v-run-slot = "scripts.run_slot:main"
i2v-run-video = "scripts.run_video:main"
i2v-list-models = "scripts.list_models:main"
i2v-list-video-models = "scripts.list_video_models:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["i2v", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"
